--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,77 +13,125 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="230dp"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="1">
 
-        <ScrollView
-            android:id="@+id/scroller"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="398dp"
-            android:layout_weight="0.85"
-            android:fillViewport="false">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/modulName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Auswahl >>"
+                android:textAlignment="center"
+                android:textSize="28sp" />
+
+            <View
+                android:id="@+id/separatorHorizontal"
                 android:layout_width="match_parent"
-                android:layout_height="391dp"
-                android:orientation="vertical">
+                android:layout_height="0.2dp"
+                android:background="@android:color/darker_gray"
+                android:visibility="visible" />
 
-                <TextView
-                    android:id="@+id/modulName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hello_world"
-                    android:textAlignment="center"
-                    android:textSize="30sp" />
+            <ListView
+                android:id="@+id/notenList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp">
 
-                <View
-                    android:id="@+id/separatorHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="0.2dp"
-                    android:background="@android:color/darker_gray"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/zwischenP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:hint="@string/action_settings"
-                    android:textAlignment="center"
-                    android:textSize="20sp" />
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Hier wird berechnung der mindestnote" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Hier berechnung der höchst möglichen o.a" />
-
-            </LinearLayout>
-        </ScrollView>
+            </ListView>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/newNoteButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="bottom|right"
-                android:layout_marginRight="10dp"
-                android:onClick="addNewNote"
-                android:src="@android:drawable/ic_input_add" />
+            <View
+                android:id="@+id/separatorHorizontal2"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@android:color/darker_gray"
+                android:visibility="visible" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:text="Min Note" />
+
+                <TextView
+                    android:id="@+id/minNote"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"
+                    android:hint="3.8" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/textView"
+                    android:text="End Note" />
+
+                <TextView
+                    android:id="@+id/maxNote"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@id/minNote"
+                    android:layout_marginRight="10dp"
+                    android:hint="6.0" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/gewunschteNote"
+                    android:layout_width="148dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="1dp"
+                    android:hint="@string/gewunschte_note"
+                    android:inputType="numberDecimal"
+                    android:textSize="14sp" />
+
+                <ImageButton
+                    android:id="@+id/wantedGrade"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginRight="10dp"
+                    android:onClick="setWantedGrade"
+                    android:src="@android:drawable/ic_menu_save" />
+
+                <ImageButton
+                    android:id="@+id/newNoteButton"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginRight="10dp"
+                    android:onClick="addNewNote"
+                    android:src="@android:drawable/ic_input_add" />
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -97,8 +148,6 @@
     <ListView
         android:id="@+id/theListDesign"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        
-    </ListView>
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
