--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,14 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="101"
-        android:showAsAction="never"
-        android:title="@string/about_menu" />
-    <item
         android:id="@+id/new_modul"
         android:orderInCategory="100"
-        android:title="@string/new_module" />
+        android:title="@string/new_modul_text"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/reset"
+        android:orderInCategory="101"
+        android:title="@string/reset_semseter"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="102"
+        android:title="@string/about_text"
+        app:showAsAction="never" />
 </menu>
