--- a/app/src/main/res/layout/add_noten_im_modul.xml
+++ b/app/src/main/res/layout/add_noten_im_modul.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="250dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -39,23 +39,19 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
             android:ems="10"
-            android:inputType="number" />
-
+            android:inputType="numberDecimal" />
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-
         <TextView
             android:id="@+id/textViewNotenText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Note" />
-
 
         <EditText
             android:id="@+id/editTextNotenEingabe"
@@ -64,8 +60,5 @@
             android:layout_marginLeft="136dp"
             android:ems="10"
             android:inputType="numberDecimal" />
-
     </LinearLayout>
-
-
 </LinearLayout>
