--- a/app/src/main/res/layout/add_noten_im_modul.xml
+++ b/app/src/main/res/layout/add_noten_im_modul.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="250dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:orientation="vertical"
@@ -12,7 +12,7 @@
 
     <EditText
         android:id="@+id/editTextTestName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -21,7 +21,7 @@
         android:hint="@string/kind_of_test"
         android:inputType="textPersonName" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -31,18 +31,23 @@
             android:id="@+id/textViewProzentNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/prozent_note" />
+            android:text="@string/prozent_note"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <EditText
             android:id="@+id/editTestNotenProzentEingabe"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
             android:ems="10"
-            android:inputType="numberDecimal" />
-    </LinearLayout>
+            android:inputType="numberDecimal"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -51,7 +56,10 @@
             android:id="@+id/textViewNotenText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Note" />
+            android:text="Note"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <EditText
             android:id="@+id/editTextNotenEingabe"
@@ -59,6 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="136dp"
             android:ems="10"
+            android:layout_alignParentRight="true"
             android:inputType="numberDecimal" />
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
