--- a/app/src/main/res/layout/noten_view.xml
+++ b/app/src/main/res/layout/noten_view.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,8 +12,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="left"
+        android:layout_marginTop="5dp"
         android:hint="@string/hello_world"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -26,25 +27,14 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_marginLeft="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_above="@+id/textView2"
+        android:layout_toEndOf="@+id/textView4"
         android:layout_toRightOf="@+id/textView4"
-        android:layout_toEndOf="@+id/textView4">
-
-        <TextView
-            android:id="@+id/zwischenP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/textView2"
-            android:layout_margin="0dp"
-            android:layout_toLeftOf="@+id/textView3"
-            android:layout_toStartOf="@+id/textView3"
-            android:hint="@string/hello_world"
-            android:textSize="15sp" />
-
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_centerVertical="true">
 
 
     </LinearLayout>
@@ -53,13 +43,12 @@
         android:id="@+id/note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/modulName"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="5dp"
         android:hint="6.0"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:layout_below="@+id/modulName"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentEnd="true" />
 
 
     <TextView
@@ -69,7 +58,18 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/modulName"
-        android:text="Prozentanteil"
+        android:text="Prozentanteil: "
         android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/zwischenP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/hello_world"
+        android:textSize="15sp"
+        android:layout_marginLeft="20dp"
+        android:layout_above="@+id/textView2"
+        android:layout_toRightOf="@+id/textView4"
+        android:layout_toEndOf="@+id/textView4" />
 
 </RelativeLayout>
